- Moved the "lib" folder from the "examples" folder to the root folder.
  - In case you have added your own library circuits, you have to move
    them manually as well.
- Reordering of the cells in the K-Map
- Counters are able to act as program counters via the remote interface.
- The circuits created have a more visible separation of the inputs.
- The hex seven seg display is turned of in case of a high-z input.
- Improved test case parser. Now the test case is able to react on the
  circuit's state.
- 7482, 74193 and 744017 were added
- Breaking changes:
  - The layout shape uses a slightly different algorithm to determine
    the pin positions. You may need to adjust usages of embedded circuits
    that use the layout shape.
  - The CommandLineTester has moved! Tests are now executed like this:
    java -cp Digital.jar CLI test [file to test]
       [-tests [optional file with test cases]]
  - Text formatting was reworked. Disable formatting with a '\' in the
    beginning does not longer work. Use "\_" to escape a underscore.

v0.24, released on 1. Feb. 2020
- Improved SVG export
- Allows to disable inputs and outputs in the measurement graph.
- Model analyzer is able to use switches as inputs.
- Editor is able to store views ([CRTL]+[[n]] to create, [[n]] ro recall
  a view. So [CTRL]+[1] stores a view in slot one and [1] recalls it.
- The octal number format was added.
- A mirroring option was added to some components.
- Custom Java implemented components can now also implement HDL code to
  represent the component in an HDL export.
- Added a undo function to the table editor.
- Adds a command line interface for testing circuits.
- Allows to disable "snap to grid" in text and rectangle components.
- A push button combined with a LED was added.
- A VGA monitor was added.
- Improved naming of new Tunnels. Unnamed Tunnels are ignored silently.
- Overlapping pins are now connected.
- Added support for INOUT ports in HDL generation.