@@ -6,7 +6,7 @@
     <visualElement>
       <elementName>coorGen.dig</elementName>
       <elementAttributes/>
-      <pos x="480" y="120"/>
+      <pos x="460" y="120"/>
     </visualElement>
     <visualElement>
       <elementName>GraphicCard</elementName>
@@ -24,7 +24,7 @@
           <int>6</int>
         </entry>
       </elementAttributes>
-      <pos x="880" y="260"/>
+      <pos x="880" y="280"/>
     </visualElement>
     <visualElement>
       <elementName>Splitter</elementName>
@@ -38,17 +38,17 @@
           <string>19</string>
         </entry>
       </elementAttributes>
-      <pos x="780" y="260"/>
+      <pos x="780" y="280"/>
     </visualElement>
     <visualElement>
       <elementName>Ground</elementName>
       <elementAttributes/>
-      <pos x="760" y="320"/>
+      <pos x="760" y="340"/>
     </visualElement>
     <visualElement>
       <elementName>Ground</elementName>
       <elementAttributes/>
-      <pos x="860" y="360"/>
+      <pos x="860" y="380"/>
     </visualElement>
     <visualElement>
       <elementName>Clock</elementName>
@@ -66,7 +66,7 @@
           <int>2147483647</int>
         </entry>
       </elementAttributes>
-      <pos x="420" y="140"/>
+      <pos x="400" y="140"/>
     </visualElement>
     <visualElement>
       <elementName>iterate.dig</elementName>
@@ -81,12 +81,12 @@
           <int>6</int>
         </entry>
       </elementAttributes>
-      <pos x="540" y="400"/>
+      <pos x="540" y="420"/>
     </visualElement>
     <visualElement>
       <elementName>VDD</elementName>
       <elementAttributes/>
-      <pos x="520" y="380"/>
+      <pos x="520" y="400"/>
     </visualElement>
     <visualElement>
       <elementName>Or</elementName>
@@ -105,12 +105,12 @@
           <string>1-6</string>
         </entry>
       </elementAttributes>
-      <pos x="900" y="400"/>
+      <pos x="900" y="420"/>
     </visualElement>
     <visualElement>
       <elementName>Const</elementName>
       <elementAttributes/>
-      <pos x="880" y="420"/>
+      <pos x="880" y="440"/>
     </visualElement>
     <visualElement>
       <elementName>Text</elementName>
@@ -123,10 +123,20 @@
       </elementAttributes>
       <pos x="440" y="20"/>
     </visualElement>
+    <visualElement>
+      <elementName>Stop</elementName>
+      <elementAttributes>
+        <entry>
+          <string>rotation</string>
+          <rotation rotation="3"/>
+        </entry>
+      </elementAttributes>
+      <pos x="540" y="280"/>
+    </visualElement>
   </visualElements>
   <wires>
     <wire>
-      <p1 x="540" y="160"/>
+      <p1 x="520" y="160"/>
       <p2 x="580" y="160"/>
     </wire>
     <wire>
@@ -134,28 +144,32 @@
       <p2 x="740" y="160"/>
     </wire>
     <wire>
-      <p1 x="860" y="320"/>
+      <p1 x="760" y="320"/>
+      <p2 x="780" y="320"/>
+    </wire>
+    <wire>
+      <p1 x="840" y="320"/>
       <p2 x="880" y="320"/>
     </wire>
     <wire>
-      <p1 x="880" y="420"/>
-      <p2 x="900" y="420"/>
+      <p1 x="940" y="320"/>
+      <p2 x="960" y="320"/>
     </wire>
     <wire>
-      <p1 x="600" y="420"/>
-      <p2 x="720" y="420"/>
+      <p1 x="920" y="420"/>
+      <p2 x="960" y="420"/>
     </wire>
     <wire>
-      <p1 x="460" y="420"/>
+      <p1 x="520" y="420"/>
       <p2 x="540" y="420"/>
     </wire>
     <wire>
-      <p1 x="800" y="260"/>
-      <p2 x="880" y="260"/>
+      <p1 x="600" y="420"/>
+      <p2 x="900" y="420"/>
     </wire>
     <wire>
-      <p1 x="580" y="260"/>
-      <p2 x="780" y="260"/>
+      <p1 x="440" y="260"/>
+      <p2 x="620" y="260"/>
     </wire>
     <wire>
       <p1 x="620" y="200"/>
@@ -166,7 +180,35 @@
       <p2 x="740" y="200"/>
     </wire>
     <wire>
-      <p1 x="760" y="300"/>
+      <p1 x="520" y="200"/>
+      <p2 x="540" y="200"/>
+    </wire>
+    <wire>
+      <p1 x="440" y="360"/>
+      <p2 x="840" y="360"/>
+    </wire>
+    <wire>
+      <p1 x="860" y="360"/>
+      <p2 x="880" y="360"/>
+    </wire>
+    <wire>
+      <p1 x="400" y="140"/>
+      <p2 x="440" y="140"/>
+    </wire>
+    <wire>
+      <p1 x="520" y="140"/>
+      <p2 x="640" y="140"/>
+    </wire>
+    <wire>
+      <p1 x="440" y="140"/>
+      <p2 x="460" y="140"/>
+    </wire>
+    <wire>
+      <p1 x="420" y="460"/>
+      <p2 x="540" y="460"/>
+    </wire>
+    <wire>
+      <p1 x="560" y="300"/>
       <p2 x="780" y="300"/>
     </wire>
     <wire>
@@ -174,51 +216,19 @@
       <p2 x="880" y="300"/>
     </wire>
     <wire>
-      <p1 x="940" y="300"/>
-      <p2 x="960" y="300"/>
-    </wire>
-    <wire>
-      <p1 x="420" y="140"/>
-      <p2 x="460" y="140"/>
-    </wire>
-    <wire>
-      <p1 x="540" y="140"/>
-      <p2 x="640" y="140"/>
-    </wire>
-    <wire>
-      <p1 x="460" y="140"/>
-      <p2 x="480" y="140"/>
-    </wire>
-    <wire>
-      <p1 x="920" y="400"/>
-      <p2 x="960" y="400"/>
-    </wire>
-    <wire>
-      <p1 x="520" y="400"/>
-      <p2 x="540" y="400"/>
-    </wire>
-    <wire>
-      <p1 x="600" y="400"/>
-      <p2 x="900" y="400"/>
-    </wire>
-    <wire>
-      <p1 x="460" y="240"/>
-      <p2 x="620" y="240"/>
-    </wire>
-    <wire>
-      <p1 x="440" y="80"/>
+      <p1 x="420" y="80"/>
       <p2 x="840" y="80"/>
     </wire>
     <wire>
-      <p1 x="460" y="340"/>
-      <p2 x="840" y="340"/>
+      <p1 x="420" y="240"/>
+      <p2 x="600" y="240"/>
     </wire>
     <wire>
       <p1 x="860" y="340"/>
       <p2 x="880" y="340"/>
     </wire>
     <wire>
-      <p1 x="540" y="180"/>
+      <p1 x="520" y="180"/>
       <p2 x="560" y="180"/>
     </wire>
     <wire>
@@ -230,104 +240,112 @@
       <p2 x="640" y="180"/>
     </wire>
     <wire>
+      <p1 x="880" y="440"/>
+      <p2 x="900" y="440"/>
+    </wire>
+    <wire>
+      <p1 x="600" y="440"/>
+      <p2 x="720" y="440"/>
+    </wire>
+    <wire>
       <p1 x="440" y="440"/>
       <p2 x="540" y="440"/>
     </wire>
     <wire>
-      <p1 x="560" y="280"/>
-      <p2 x="780" y="280"/>
-    </wire>
-    <wire>
-      <p1 x="840" y="280"/>
+      <p1 x="800" y="280"/>
       <p2 x="880" y="280"/>
     </wire>
     <wire>
-      <p1 x="440" y="120"/>
-      <p2 x="480" y="120"/>
+      <p1 x="580" y="280"/>
+      <p2 x="780" y="280"/>
     </wire>
     <wire>
-      <p1 x="540" y="120"/>
+      <p1 x="420" y="120"/>
+      <p2 x="460" y="120"/>
+    </wire>
+    <wire>
+      <p1 x="520" y="120"/>
       <p2 x="640" y="120"/>
     </wire>
     <wire>
-      <p1 x="440" y="220"/>
-      <p2 x="600" y="220"/>
+      <p1 x="960" y="320"/>
+      <p2 x="960" y="420"/>
     </wire>
     <wire>
-      <p1 x="960" y="300"/>
-      <p2 x="960" y="400"/>
+      <p1 x="420" y="80"/>
+      <p2 x="420" y="120"/>
     </wire>
     <wire>
-      <p1 x="720" y="200"/>
-      <p2 x="720" y="420"/>
+      <p1 x="420" y="240"/>
+      <p2 x="420" y="460"/>
     </wire>
     <wire>
-      <p1 x="560" y="180"/>
-      <p2 x="560" y="280"/>
+      <p1 x="420" y="120"/>
+      <p2 x="420" y="240"/>
     </wire>
     <wire>
       <p1 x="580" y="160"/>
-      <p2 x="580" y="260"/>
+      <p2 x="580" y="280"/>
     </wire>
     <wire>
-      <p1 x="440" y="80"/>
-      <p2 x="440" y="120"/>
-    </wire>
-    <wire>
-      <p1 x="440" y="220"/>
-      <p2 x="440" y="440"/>
-    </wire>
-    <wire>
-      <p1 x="440" y="120"/>
-      <p2 x="440" y="220"/>
-    </wire>
-    <wire>
-      <p1 x="520" y="380"/>
-      <p2 x="520" y="400"/>
+      <p1 x="520" y="400"/>
+      <p2 x="520" y="420"/>
     </wire>
     <wire>
       <p1 x="840" y="80"/>
       <p2 x="840" y="180"/>
     </wire>
     <wire>
-      <p1 x="840" y="300"/>
-      <p2 x="840" y="340"/>
+      <p1 x="840" y="320"/>
+      <p2 x="840" y="360"/>
     </wire>
     <wire>
       <p1 x="840" y="180"/>
-      <p2 x="840" y="280"/>
-    </wire>
-    <wire>
-      <p1 x="600" y="180"/>
-      <p2 x="600" y="220"/>
-    </wire>
-    <wire>
-      <p1 x="760" y="300"/>
-      <p2 x="760" y="320"/>
-    </wire>
-    <wire>
-      <p1 x="460" y="140"/>
-      <p2 x="460" y="240"/>
-    </wire>
-    <wire>
-      <p1 x="460" y="340"/>
-      <p2 x="460" y="420"/>
-    </wire>
-    <wire>
-      <p1 x="460" y="240"/>
-      <p2 x="460" y="340"/>
+      <p2 x="840" y="300"/>
     </wire>
     <wire>
       <p1 x="620" y="200"/>
-      <p2 x="620" y="240"/>
+      <p2 x="620" y="260"/>
     </wire>
     <wire>
-      <p1 x="860" y="320"/>
-      <p2 x="860" y="340"/>
+      <p1 x="720" y="200"/>
+      <p2 x="720" y="440"/>
+    </wire>
+    <wire>
+      <p1 x="560" y="180"/>
+      <p2 x="560" y="300"/>
+    </wire>
+    <wire>
+      <p1 x="440" y="140"/>
+      <p2 x="440" y="260"/>
+    </wire>
+    <wire>
+      <p1 x="440" y="360"/>
+      <p2 x="440" y="440"/>
+    </wire>
+    <wire>
+      <p1 x="440" y="260"/>
+      <p2 x="440" y="360"/>
+    </wire>
+    <wire>
+      <p1 x="600" y="180"/>
+      <p2 x="600" y="240"/>
+    </wire>
+    <wire>
+      <p1 x="760" y="320"/>
+      <p2 x="760" y="340"/>
     </wire>
     <wire>
       <p1 x="860" y="340"/>
       <p2 x="860" y="360"/>
+    </wire>
+    <wire>
+      <p1 x="860" y="360"/>
+      <p2 x="860" y="380"/>
+    </wire>
+    <wire>
+      <p1 x="540" y="200"/>
+      <p2 x="540" y="280"/>
     </wire>
   </wires>
   <measurementOrdering/>
